--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -15,7 +15,7 @@
         </h2>
         <div class="container">
             <br>
-            <form id="registerForm" class="box make-it-small">
+            <form action="/api/sessions/register" method="POST" class="box make-it-small">
                 <div class="field">
                     <label class="make-it-normal">Display name (Username)</label>
                     <div class="control">
